<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="256dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/event_title_label"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="395dp"
        tools:layout_conversion_wrapHeight="50"
        tools:layout_conversion_wrapWidth="181" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="264dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/event_description_label"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_title"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="395dp"
        tools:layout_conversion_wrapHeight="50"
        tools:layout_conversion_wrapWidth="181" />

    <EditText
        android:id="@+id/event_description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/event_description_hint2"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="395dp"
        tools:layout_conversion_wrapHeight="50"
        tools:layout_conversion_wrapWidth="181" />

    <EditText
        android:id="@+id/event_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/event_description_hint"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="395dp"
        tools:layout_conversion_wrapHeight="50"
        tools:layout_conversion_wrapWidth="181" />

    <EditText
        android:id="@+id/event_description3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/event_description_hint2"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description2"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="395dp"
        tools:layout_conversion_wrapHeight="50"
        tools:layout_conversion_wrapWidth="181" />

    <EditText
        android:id="@id/event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/event_title_hint"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="395dp"
        tools:layout_conversion_wrapHeight="50"
        tools:layout_conversion_wrapWidth="181" />

    <Button
        android:id="@+id/event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="395dp"
        tools:layout_conversion_wrapHeight="50"
        tools:layout_conversion_wrapWidth="181" />

    <Switch
        android:id="@+id/event_favorited"
        android:textColor="@color/colorWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="20dp"
        android:text="@string/event_alert_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="395dp"
        tools:layout_conversion_wrapHeight="50"
        tools:layout_conversion_wrapWidth="181" />

    <ImageView
    android:id="@+id/event_picture"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_marginStart="36dp"
    android:layout_marginTop="8dp"
    app:layout_constraintBottom_toTopOf="@+id/textView2"
    app:layout_constraintStart_toEndOf="@+id/event_title"
    app:layout_constraintTop_toBottomOf="@+id/event_favorited"
    app:layout_constraintVertical_bias="0.47" />

    <ImageButton
        android:id="@+id/button_camera"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/event_picture"/>



</android.support.constraint.ConstraintLayout>